08 Mar 2007 More tweaks to machdep.h i686 code - Greg
07 Mar 2007 Fix store_dw_i686 - Greg
07 Mar 2007 Fix fetch_dw_i686 - Greg
07 Mar 2007 Remove inline attr from vfetchx/vstorex _full functions - Greg
07 Mar 2007 Fix for SIE'd TPROT - Ivan Warren
06 Mar 2007 Fix ckd RDC response - Greg
27 Feb 2007 PR# misc/87 startup messages fix completion - Kevin Leonard
27 Feb 2007 Fix minor glitch in enhanced symbol substitution - Fish
26 Feb 2007 Fix print-to-pipe to accept paramters - Fish
25 Feb 2007 Fix het_locate to continue on tapemark - herc_fun [os_390@hotmail.com] by Fish
25 Feb 2007 Fix crash in LCS close if devinit of incomplete group - Fish
18 Feb 2007 Add TIME and NOTIME synonyms for LOGOPT operands - Kevin Leonard
14 Feb 2007 Fix ckd RCD, SNSS, SNSID responses - Greg
13 Feb 2007 Treat DIAG X'9C' same as DIAG X'44' - Fish
08 Feb 2007 Don't log Sense Running State SIGP order - Fish
03 Feb 2007 Fix MVT tape CMDREJ error - Greg Smith
31 Jan 2007 Add LOGOPT init statement and panel command - Kevin Leonard
30 Jan 2007 Decimal Floating Point (DFP) facility - Roger Bowler
15 Jan 2007 ia32/x64 cmpxchgX assists fix/enhancements - Greg & Ivan
14 Jan 2007 Fix S370 only build - nerak60510 by Greg
11 Jan 2007 implement ccmask phase 1 - Bernard van der Helm
10 Jan 2007 Try to detect 3270 connections that have died - Fish
09 Jan 2007 Tweaks to sloppy fetch - Greg Smith
09 Jan 2007 Tweaks to cpuloop - Greg Smith
09 Jan 2007 Bypass mainlock if only 1 cpu started - Greg Smith
09 Jan 2007 Tweaks to lm/stm - Greg Smith
08 Jan 2007 Add dasdconv -q (quiet) option - Roger Bowler
04 Jan 2007 remove thunk calls for program_interrupt - Greg Smith
03 Jan 2007 single_cpu_dw fetch/store patch for ia32 - Greg Smith
03 Jan 2007 vstorex patch to vstore2, vstore4, vstore8 - Greg Smith
30 Dec 2006 Minor correction to PR# build_msc/103 fix - Fish
03 Jan 2007 Sloppy fetch - Greg Smith
02 Jan 2007 Fix deconfigure_cpu so power-off diagnoses work - Fish